# taxxa-ml-assessment

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
config/: models.yaml  params.yaml
part1_rag_eval/: README.md  run.py  writeup.md
part1_rag_eval/outputs/: part1_results.csv
part1_rag_eval/src/: data_loader.py  graph_utils.py  metrics.py  retrievers.py
part2_fine_tuning/: inference.py  run_data_prep.py  run_eval.py  run_train.py  writeup.md
part2_fine_tuning/data/: synthetic_kila_train.jsonl  synthetic_kila_val.jsonl  val_doc_ids.json
part2_fine_tuning/outputs/: eval_summary.csv
part2_fine_tuning/src/: dataset_generator.py
utils/: config.py  llm_services.py
